--- a/App/app/src/main/res/layout/activity_dashboard.xml
+++ b/App/app/src/main/res/layout/activity_dashboard.xml
@@ -28,7 +28,6 @@
         android:layout_width="310dp"
         android:layout_height="117dp"
         android:layout_gravity="center"
-        android:layout_marginTop="56dp"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
@@ -40,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardViewPlay">
+        tools:layout_editor_absoluteY="256dp">
 
         <ImageView
             android:id="@+id/adminIcon"
@@ -60,44 +59,6 @@
             android:fontFamily="sans-serif-light"
             android:gravity="bottom"
             android:text="Ranking"
-            android:textColor="#FAF9F9"
-            android:textSize="24sp" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewPlay"
-        android:layout_width="315dp"
-        android:layout_height="128dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="72dp"
-        android:padding="20dp"
-        app:cardBackgroundColor="@android:color/holo_blue_dark"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="20dp"
-        app:contentPadding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.576"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/playIcon"
-            android:layout_width="90dp"
-            android:layout_height="66dp"
-            android:layout_gravity="center_horizontal"
-            android:contentDescription="@string/calendar"
-            android:padding="12dp"
-            app:srcCompat="@android:drawable/ic_media_play" />
-
-        <TextView
-            android:id="@+id/playTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:fontFamily="sans-serif-light"
-            android:gravity="bottom"
-            android:text="Play"
             android:textColor="#FAF9F9"
             android:textSize="24sp" />
 
@@ -157,5 +118,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.95" />
+
+    <Button
+        android:id="@+id/play"
+        android:layout_width="90dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="44dp"
+        android:text="Play"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardViewRanking" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
