--- a/App/app/src/main/res/layout/activity_game.xml
+++ b/App/app/src/main/res/layout/activity_game.xml
@@ -14,17 +14,16 @@
         android:text="ROUND"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/progresso_general" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <params.com.stepprogressview.StepProgressView
         android:id="@+id/stepProgressView2"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        app:currentProgress="40"
+        android:layout_width="316dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="160dp"
+        app:currentProgress="120"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.612"
+        app:layout_constraintHorizontal_bias="0.414"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:markerColor="@android:color/white"
@@ -33,38 +32,50 @@
         app:progressColor="@color/colorPrimaryDark"
         app:textMargin="5dp"
         app:textSize="15sp"
-        app:totalProgress="100" />
+        app:totalProgress="120" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/categoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:text="Categoria X"
+        android:text='Click al botó de "Round" per començar'
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.app.progresviews.ProgressWheel
-        android:id="@+id/progresso_general"
-        android:layout_width="90dp"
-        android:layout_height="75dp"
-        app:barWidth="17dp"
-        app:countText="931,199"
-        app:countTextColor="@android:color/black"
-        app:countTextSize="20sp"
-        app:defTextColor="@android:color/black"
-        app:defTextSize="10sp"
-        app:definitionText="Steps"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pantallafinal"
+        android:layout_width="409dp"
+        android:layout_height="0dp"
+        android:clickable="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:marginBtwText="15dp"
-        app:percentage="90"
-        app:progressColor="#64b324" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.354">
+
+        <TextView
+            android:id="@+id/finalResult"
+            android:layout_width="match_parent"
+            android:layout_height="69dp"
+            android:text="HELL0"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/restartbutton"
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            android:layout_marginTop="200dp"
+            android:text="RESTART" />
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="393dp"
         android:layout_height="76dp"
         android:orientation="horizontal"
@@ -75,7 +86,7 @@
             android:id="@+id/vida1"
             android:layout_width="123dp"
             android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/retroheart"
             tools:layout_editor_absoluteX="-31dp"
             tools:layout_editor_absoluteY="157dp" />
 
@@ -84,7 +95,7 @@
             android:layout_width="123dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/retroheart"
             tools:layout_editor_absoluteX="-31dp"
             tools:layout_editor_absoluteY="157dp" />
 
@@ -93,7 +104,7 @@
             android:layout_width="123dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/retroheart"
             tools:layout_editor_absoluteX="-31dp"
             tools:layout_editor_absoluteY="157dp" />
 
