--- a/App/app/src/main/res/layout/activity_dashboard.xml
+++ b/App/app/src/main/res/layout/activity_dashboard.xml
@@ -108,6 +108,7 @@
         android:layout_width="310dp"
         android:layout_height="117dp"
         android:layout_gravity="center"
+        android:onClick="onClick"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
