--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="blue">#2196F3</color>
     <color name="green">#76ff03</color>
     <color name="red">#f4511e</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
