--- a/App/app/src/main/res/layout/list_view_item_row.xml
+++ b/App/app/src/main/res/layout/list_view_item_row.xml
@@ -10,8 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="17dp"
         android:layout_toEndOf="@+id/iv_image"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -19,5 +18,12 @@
         android:textColor="@android:color/black"
         android:textColorLink="@color/colorAccent"
         tools:text="Item Name" />
+
+    <TextView
+        android:id="@+id/favourTypeColour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#D71D1D"
+        android:text="  " />
 
 </RelativeLayout>
