--- a/App/app/src/main/res/layout/activity_game.xml
+++ b/App/app/src/main/res/layout/activity_game.xml
@@ -4,8 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".views.GameActivity">
 
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="wrap_content"
+        android:layout_height="106dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="141dp"
+            android:layout_height="match_parent"
+            android:background="#7BABC1">
+
+            <RatingBar
+                android:id="@+id/ratingBar_net"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:numStars="3"
+                android:stepSize="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="NETWORK"
+                android:textAlignment="center" />
+
+            <CheckBox
+                android:id="@+id/checkBox_net"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:clickable="false" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="141dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical">
+
+            <RatingBar
+                android:id="@+id/ratingBar_patterns"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:numStars="3"
+                android:stepSize="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PATTERNS"
+                android:textAlignment="center" />
+
+            <CheckBox
+                android:id="@+id/checkBox_pat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:clickable="false" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <Button
         android:id="@+id/roll"
@@ -16,36 +80,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/progresso_general" />
-
-    <params.com.stepprogressview.StepProgressView
-        android:id="@+id/stepProgressView2"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        app:currentProgress="40"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.612"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:markerColor="@android:color/white"
-        app:markerWidth="3dp"
-        app:markers="10,60,120"
-        app:progressColor="@color/colorPrimaryDark"
-        app:textMargin="5dp"
-        app:textSize="15sp"
-        app:totalProgress="100" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:text="Categoria X"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.app.progresviews.ProgressWheel
         android:id="@+id/progresso_general"
@@ -65,6 +99,7 @@
         app:progressColor="#64b324" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="393dp"
         android:layout_height="76dp"
         android:orientation="horizontal"
@@ -75,7 +110,7 @@
             android:id="@+id/vida1"
             android:layout_width="123dp"
             android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/hearth"
             tools:layout_editor_absoluteX="-31dp"
             tools:layout_editor_absoluteY="157dp" />
 
@@ -84,7 +119,7 @@
             android:layout_width="123dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/hearth"
             tools:layout_editor_absoluteX="-31dp"
             tools:layout_editor_absoluteY="157dp" />
 
@@ -93,10 +128,86 @@
             android:layout_width="123dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:srcCompat="@drawable/hearth"
             tools:layout_editor_absoluteX="-31dp"
             tools:layout_editor_absoluteY="157dp" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="106dp"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView_dB"
+            android:layout_width="141dp"
+            android:layout_height="match_parent"
+            android:background="#7BABC1">
+
+            <RatingBar
+                android:id="@+id/ratingBar_dB"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:backgroundTint="@color/blue"
+                android:numStars="3"
+                android:stepSize="1" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DATABASE"
+                android:textAlignment="center" />
+
+            <CheckBox
+                android:id="@+id/checkBox_dB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:clickable="false" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView_os"
+            android:layout_width="141dp"
+            android:layout_height="match_parent">
+
+            <RatingBar
+                android:id="@+id/ratingBar_os"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_vertical"
+                android:numStars="3"
+                android:stepSize="1" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="OS"
+                android:textAlignment="center" />
+
+            <CheckBox
+                android:id="@+id/checkBox_os"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:clickable="false" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="330dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
