--- a/App/app/src/debug/res/values/colors.xml
+++ b/App/app/src/debug/res/values/colors.xml
@@ -4,7 +4,10 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="blue">#2196F3</color>
-    <color name="green">#76ff03</color>
-    <color name="red">#f4511e</color>
+    <color name="blue">#0048FF</color>
+    <color name="green">#22FF00</color>
+    <color name="red">#FF3D00</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="black">#000000</color>
+
 </resources>
