--- a/App/app/src/main/res/layout/activity_main_page.xml
+++ b/App/app/src/main/res/layout/activity_main_page.xml
@@ -17,7 +17,20 @@
             android:id="@+id/container_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/filtre"
+                android:layout_width="match_parent"
+                android:layout_height="34dp"
+                android:layout_marginStart="348dp"
+                android:layout_marginTop="8dp"
+                android:onClick="onEditClick"
+                app:layout_constraintStart_toStartOf="@+id/up_panel"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/filtre" />
+
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/content_frame"
