--- a/App/app/src/main/res/layout/activity_play.xml
+++ b/App/app/src/main/res/layout/activity_play.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="156dp"
         app:currentProgress="40"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.612"
+        app:layout_constraintHorizontal_bias="0.613"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:markerColor="@android:color/white"
@@ -97,4 +97,14 @@
             tools:layout_editor_absoluteY="157dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/resp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
+        android:text="Respuesta"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stepProgressView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
