--- a/App/app/src/main/res/layout/activity_dashboard.xml
+++ b/App/app/src/main/res/layout/activity_dashboard.xml
@@ -24,7 +24,7 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewAdmin"
+        android:id="@+id/cardView_ranking"
         android:layout_width="310dp"
         android:layout_height="117dp"
         android:layout_gravity="center"
@@ -104,10 +104,11 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewRanking"
+        android:id="@+id/cardView_admin"
         android:layout_width="310dp"
         android:layout_height="117dp"
         android:layout_gravity="center"
+        android:clickable="true"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
@@ -120,7 +121,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardViewAdmin"
+        app:layout_constraintTop_toBottomOf="@+id/cardView_ranking"
         app:layout_constraintVertical_bias="0.203">
 
         <ImageView
