--- a/App/app/src/main/res/layout/activity_dashboard.xml
+++ b/App/app/src/main/res/layout/activity_dashboard.xml
@@ -160,7 +160,7 @@
         android:layout_height="52dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginStart="296dp"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="476dp"
         android:background="@drawable/btn_contador"
         android:gravity="center"
         android:textColor="#000000"
@@ -170,13 +170,13 @@
 
     <TextView
         android:id="@+id/textView_textcont"
-        android:layout_width="202dp"
-        android:layout_height="78dp"
+        android:layout_width="204dp"
+        android:layout_height="56dp"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="468dp"
+        android:layout_marginTop="476dp"
         android:background="@drawable/btn_contador"
         android:gravity="center"
-        android:text="Contador de preguntes"
+        android:text="Question counter"
         android:textColor="#050505"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
