--- a/App/app/src/main/res/layout/activity_quest.xml
+++ b/App/app/src/main/res/layout/activity_quest.xml
@@ -9,14 +9,28 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvquestionList"
-        android:layout_width="370dp"
-        android:layout_height="725dp"
+        android:layout_width="367dp"
+        android:layout_height="707dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="40dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.419"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/activity_qitem"/>
+        tools:listitem="@layout/activity_qitem" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="173dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="180dp"
+        android:text="@string/question_list"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
