--- a/App/app/src/main/res/layout/activity_quest.xml
+++ b/App/app/src/main/res/layout/activity_quest.xml
@@ -1,33 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rvQuestList"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".views.QuestActivity">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvquestionList"
-        android:layout_width="367dp"
-        android:layout_height="707dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="40dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.419"
+        android:id="@+id/questList"
+        android:layout_width="379dp"
+        android:layout_height="533dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="96dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/activity_qitem" />
+        tools:listitem="@layout/question_items" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewquest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginTop="36dp"
         android:text="@string/question_list"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
